[gd_scene load_steps=22 format=3 uid="uid://cegqjo31aarvw"]

[ext_resource type="Script" path="res://PlayerScripts/MapSurface.gd" id="1_8jnke"]
[ext_resource type="Script" path="res://EditableMap.gd" id="2_3v0d1"]
[ext_resource type="Script" path="res://PlayerScripts/PlayerController.gd" id="3_4clgg"]
[ext_resource type="Texture2D" uid="uid://bk66tx41gvhkm" path="res://coast_sand_rocks_02_diff_4k.jpg" id="4_db4cw"]
[ext_resource type="Script" path="res://PlayerScripts/ItemManager.gd" id="4_s6usk"]
[ext_resource type="Material" uid="uid://cl2nlqr3dqeqo" path="res://Materials/ButtonBG.tres" id="5_1rqac"]
[ext_resource type="Texture2D" uid="uid://bvdyt6jhg42oc" path="res://Textures/ButtonWater.png" id="5_pimth"]
[ext_resource type="Material" uid="uid://b5o0gu7ahor2g" path="res://Materials/ButtonWater.tres" id="6_866vr"]
[ext_resource type="Material" uid="uid://cxumquffv4q3t" path="res://Materials/ButtonCliff.tres" id="8_3q6o8"]
[ext_resource type="Material" uid="uid://iln7dat2vyml" path="res://Materials/ButtonEraser.tres" id="9_trx7e"]

[sub_resource type="Environment" id="Environment_yanan"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_18swh"]
radius = 0.4

[sub_resource type="QuadMesh" id="QuadMesh_lr13n"]

[sub_resource type="Resource" id="Resource_8lmju"]
script = ExtResource("2_3v0d1")
Width = 256
Height = 256
BGColor = Color(0.749303, 0.64661, 0.286261, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_o22g7"]
size = Vector3(1, 1, 0.05)

[sub_resource type="QuadMesh" id="QuadMesh_hr3vy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s02l6"]
albedo_texture = ExtResource("5_pimth")

[sub_resource type="BoxShape3D" id="BoxShape3D_kcsa5"]
size = Vector3(1, 1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u3e4m"]
albedo_texture = ExtResource("4_db4cw")
metallic_specular = 0.0
normal_enabled = true
normal_scale = 16.0

[sub_resource type="PlaneMesh" id="PlaneMesh_tl1ox"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7wy8w"]
size = Vector3(2, 0.1, 2)

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yanan")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.951718, 0.306975, 0, -0.306975, 0.951718, 0, 0, 0)

[node name="Player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("CameraNode")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.03934)
script = ExtResource("3_4clgg")
CameraNode = NodePath("Camera3D")
LookSpeedWhenNotCaptured = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_18swh")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.608218, 0)

[node name="ItemManager" type="Node3D" parent="Player/Camera3D" node_paths=PackedStringArray("Items")]
script = ExtResource("4_s6usk")
Items = [NodePath("Map")]

[node name="Map" type="MeshInstance3D" parent="Player/Camera3D/ItemManager" node_paths=PackedStringArray("TargetMesh", "Camera", "Collider", "WaterToolButton", "CliffToolButton", "EraserToolButton")]
transform = Transform3D(1, 0, 0, 0, 0.82806, 0.560639, 0, -0.560639, 0.82806, 0, -0.139, -1.067)
mesh = SubResource("QuadMesh_lr13n")
skeleton = NodePath("../../../..")
script = ExtResource("1_8jnke")
TargetMesh = NodePath(".")
Map = SubResource("Resource_8lmju")
Camera = NodePath("../..")
Collider = NodePath("StaticBody3D")
WaterToolButton = NodePath("ToolPalette/WaterToolButton")
CliffToolButton = NodePath("ToolPalette/CliffToolButton")
EraserToolButton = NodePath("ToolPalette/EraserToolButton")

[node name="StaticBody3D" type="StaticBody3D" parent="Player/Camera3D/ItemManager/Map"]
collision_layer = 32768
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Camera3D/ItemManager/Map/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.025)
shape = SubResource("BoxShape3D_o22g7")

[node name="ToolPalette" type="Node3D" parent="Player/Camera3D/ItemManager/Map"]
transform = Transform3D(1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, -0.63791, 0, 0)

[node name="WaterToolButton" type="StaticBody3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette"]
transform = Transform3D(0.18, 0, 0, 0, 0.18, -6.70552e-09, 0, 6.70552e-09, 0.18, 0, 0.25, 1.49012e-08)
collision_layer = 32768
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/WaterToolButton"]
material_override = ExtResource("5_1rqac")
mesh = SubResource("QuadMesh_hr3vy")

[node name="Icon" type="MeshInstance3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/WaterToolButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.05)
material_override = ExtResource("6_866vr")
mesh = SubResource("QuadMesh_hr3vy")
surface_material_override/0 = SubResource("StandardMaterial3D_s02l6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/WaterToolButton"]
transform = Transform3D(1, 0, 0, 0, 1, 5.96046e-07, 0, -5.96046e-07, 1, 0, 2.38419e-07, -0.0500001)
shape = SubResource("BoxShape3D_kcsa5")

[node name="CliffToolButton" type="StaticBody3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette"]
transform = Transform3D(0.18, 0, 0, 0, 0.18, 0, 0, 0, 0.18, 0, 0, 0)
collision_layer = 32768
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/CliffToolButton"]
material_override = ExtResource("5_1rqac")
mesh = SubResource("QuadMesh_hr3vy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/CliffToolButton"]
transform = Transform3D(1, 0, 0, 0, 1, 5.96046e-07, 0, -5.96046e-07, 1, 0, 2.38419e-07, -0.0500001)
shape = SubResource("BoxShape3D_kcsa5")

[node name="Icon" type="MeshInstance3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/CliffToolButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.05)
material_override = ExtResource("8_3q6o8")
mesh = SubResource("QuadMesh_hr3vy")
surface_material_override/0 = SubResource("StandardMaterial3D_s02l6")

[node name="EraserToolButton" type="StaticBody3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette"]
transform = Transform3D(0.18, 0, 0, 0, 0.18, 0, 0, 0, 0.18, 0, -0.25, 0)
collision_layer = 32768
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/EraserToolButton"]
material_override = ExtResource("5_1rqac")
mesh = SubResource("QuadMesh_hr3vy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/EraserToolButton"]
transform = Transform3D(1, 0, 0, 0, 1, 5.96046e-07, 0, -5.96046e-07, 1, 0, 2.38419e-07, -0.0500001)
shape = SubResource("BoxShape3D_kcsa5")

[node name="Icon" type="MeshInstance3D" parent="Player/Camera3D/ItemManager/Map/ToolPalette/EraserToolButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.05)
material_override = ExtResource("9_trx7e")
mesh = SubResource("QuadMesh_hr3vy")
surface_material_override/0 = SubResource("StandardMaterial3D_s02l6")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(7.05, 0, 0, 0, 7.05, 0, 0, 0, 7.05, 0, -1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
material_override = SubResource("StandardMaterial3D_u3e4m")
mesh = SubResource("PlaneMesh_tl1ox")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
shape = SubResource("BoxShape3D_7wy8w")
